--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-genie": "^0.1.6",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.2",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
